# ShaderTool

./: .gitignore  CMakeLists.txt  CTestTestfile.cmake  Future_Ideas.txt  LICENSE  README.md  build.sh  install_dependencies.sh
assets/models/movecube/: moveCube.dae
assets/shaders/: Skybox_Frag.fs  assimp_frag.fs  assimp_vert.vs  basic_color_frag.fs  blended_texture_frag.fs  debug_frag.fs  debug_vert.vs  depthpass_frag.fs  depthpass_vert.vs  error_vert.vs  extrude_normals.gs  extrude_normals_vert.vs  frame_geom.gs  frame_vert.vs  gouraud_frag.fs  gouraud_vert.vs  phong_frag.fs  phong_frag_normalMap.fs  phong_frag_paralaxMap.fs  phong_frag_textured.fs  phong_frag_toon.fs  phong_vert.vs  phong_vert_textured.vs  postprocess_frag.fs  postprocess_frag_blur.fs  postprocess_frag_displayDepth.fs  postprocess_frag_motionBlur.fs  postprocess_frag_passthrough.fs  postprocess_frag_toneMapping.fs  postprocess_vert.vs  reflect_frag.fs  reflect_vert.vs  shadertool_framebufferFragment.fs  shadertool_framebufferVertex.vs  sillouette_frag.fs  simple_geom.gs  simple_geom_frag.fs  simple_geom_vert.vs  skybox_vert.vs  test_frag.fs  (+8 more)
assets/shaders/deferred/: deferred_debug.fs  deferred_frag.fs  deferred_simpleLight.fs  deferred_simpleLight_ambient.fs  deferred_vert.vs  ssao_blur.fs  ssao_displayResult.fs  ssao_frag.fs  ssao_gfrag.fs  ssao_gvert.vs  ssao_vert.vs
assets/shaders/instance/: instance_test_frag.fs  instance_test_vert.vs
assets/shaders/lighting/: phong_frag_textured_pointLights.fs  phong_frag_textured_pointLights_bloom.fs
assets/shaders/postprocessing/: postprocess_frag_toneMapping_bloom.fs  postprocess_twoPassBlur.fs
assets/shaders/shadowShaders/: phong_frag_shadow.fs  phong_vert_shadow.vs
assets/shaders/skeleton/: skel_vert.vs
assets/test/shaders/: test_shaderBasic.fs  test_shaderBasic.vs
include/: easylogging++.h
src/: main.cpp  main.cpp.bak
src/IntrospectionView/: FloatElement.cpp  FloatElement.h  ImguiTextureSelector.h  IntElement.cpp  IntElement.h  ProgramManagerElement.h  ProgramManagerElementFactory.cpp  ProgramManagerElementFactory.h  ProgramManagerWindow.cpp  ProgramManagerWindow.h  TextureSelectorTarget.h  TransformMatrixElement.cpp  TransformMatrixElement.h  UnknownElement.cpp  UnknownElement.h  Vec3Element.cpp  Vec3Element.h
src/ProgramParser/: GLSLParser.cpp  GLSLParser.h
src/assetWrappers/: Cubemap.cpp  Cubemap.h  FSLiveReloadManager.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  NullReloadManager.cpp  NullReloadManager.h  PingPongFrameBuffer.h  PingPongFramebuffer.cpp  ReloadLocator.cpp  ReloadLocator.h  ReloadableAsset.cpp  ReloadableAsset.h  ShaderManager.cpp  ShaderManager.h  SkeletalAnimation.cpp  SkeletalAnimation.h  Skeleton.cpp  Skeleton.h  SkeletonRenderer.cpp  SkeletonRenderer.h  Texture2D.cpp  Texture2D.h  TextureConfig.h  TextureManager.cpp  TextureManager.h  Vertex.h  VertexBoneData.h
src/assetWrappers/Apple/: AppleLiveReloadManager.cpp  AppleLiveReloadManager.h
src/buffers/: ElementBufferObject.cpp  ElementBufferObject.h  FrameBuffer.h  Framebuffer.cpp  FramebufferConfiguration.cpp  FramebufferConfiguration.h  TextureBuffer.cpp  TextureBuffer.h  VertexArrayObject.cpp  VertexArrayObject.h  VertexBuffer.cpp  VertexBuffer.h
src/core/: Context.cpp  Context.h  EmptyScene.cpp  EmptyScene.h  Scene.cpp  Scene.h  Window.cpp  Window.h
src/glsl/: GL_Structure.cpp  GL_Structure.h  Program.cpp  Program.h  Shader.cpp  Shader.h
src/imgui/: imgui_impl_glfw_gl3.cpp
src/introspection/: ArrayUniformObject.cpp  ArrayUniformObject.h  GLSLType.h  StructUniformObject.cpp  StructUniformObject.h  UniformExtractor.cpp  UniformExtractor.h  UniformObject.cpp  UniformObject.h  UniformObjectController.cpp  UniformObjectController.h
src/introspection/uniformObjectControllers/: FloatObjectController.h  IntObjectController.h  (+7 more)
src/io/: DirectoryHandler.cpp  DirectoryHandler.h  GLFWHandler.cpp  GLFWHandler.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h  TextLoader.cpp  TextLoader.h  tiny_obj_loader.cc  tiny_obj_loader.h
src/logger/: GL_Logger.cpp  GL_Logger.h
src/render/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  Material.cpp  Material.h  Spotlight.cpp  Spotlight.h  TextureUnitManager.cpp  TextureUnitManager.h  TexturedMaterial.cpp  TexturedMaterial.h
src/scene/: ModelManager.cpp  ModelManager.h  RenderInfoController.cpp  RenderInfoController.h  ToolScene.cpp  ToolScene.h  ToolSceneProgramManager.cpp  ToolSceneProgramManager.h  ToolSceneTextureManager.cpp  ToolSceneTextureManager.h
src/scenes/: AnimScene.cpp  AnimScene.h  AssimpScene.cpp  AssimpScene.h  BlendingScene.cpp  BlendingScene.h  BloomScene.cpp  BloomScene.h  BoxScene.h  Boxscene.cpp  CameraScene.cpp  CameraScene.h  CubemapScene.cpp  CubemapScene.h  ErrorScene.cpp  ErrorScene.h  GeometryShaderScene.cpp  GeometryShaderScene.h  HDRScene.cpp  HDRScene.h  HRDScene.cpp  InstancingScene.cpp  InstancingScene.h  MotionBlurScene.cpp  MotionBlurScene.h  NormalMapScene.cpp  NormalMapScene.h  OutlineScene.cpp  OutlineScene.h  ParalaxMappingScene.cpp  ParalaxMappingScene.h  PostProcessScene.cpp  PostProcessScene.h  Scenes.h  ShadowScene.cpp  ShadowScene.h  VisualizeNormalScene.cpp  VisualizeNormalsScene.h
src/util/: Camera.cpp  Camera.h  Cube.cpp  Cube.h  FileUtils.h  FirstPersonCamera.cpp  FirstPersonCamera.h  GlmUtil.h  Grid.cpp  Grid.h  OrbitalCamera.h  OribtalCamera.cpp  Plane.cpp  Plane.h  TabletopCamera.cpp  TabletopCamera.h  Transform.cpp  Transform.h  World.cpp  World.h
test/: main.cpp
test/Framebuffertests/: TestFramebufferCreation.cpp
test/IOTests/: KeyboardTest.cpp  MouseTest.cpp
test/MemManagement/: TextureUnitManagerTest.cpp
test/ParseTests/: TemplatedMethodsTest.cpp
test/SceneTests/: BasicSceneTest.cpp  BasicSceneTest.h
test/ShaderTests/: ProgramBasicTests.cpp  ShaderArrayTests.cpp  ShaderStructTests.cpp
test/UtilityTests/: TransformTest.cpp
test/introspection/: TestQueryStructures.cpp
test/io/: TestDirectoryHandler.cpp
test/program/: TestStructures.cpp
test/testAssets/: TestReloadManager.cpp  TestReloadManager.h  arrayFrag.fs  badVert.vs  structFrag.fs
(+4 files in other folders)
